--- a/.env_example
+++ b/.env_example
@@ -12,7 +12,8 @@ export TRIANNON_LOG_FILE='log/triannon_client.log'
 
 # Configure the triannon service
 export TRIANNON_HOST='http://localhost:3000'
-export TRIANNON_USER=''
-export TRIANNON_PASS=''
+export TRIANNON_USER=''   #Basic Auth Username
+export TRIANNON_PASS=''   #Basic Auth Password
+export TRIANNON_SECRET='' #OAuth Client Secret Key
 export TRIANNON_CONTAINER='/annotations/'
 
