Revise OAuth credentials

--- a/.env_example
+++ b/.env_example
@@ -14,6 +14,7 @@ export TRIANNON_LOG_FILE='log/triannon_client.log'
 export TRIANNON_HOST='http://localhost:3000'
 export TRIANNON_USER=''   #Basic Auth Username
 export TRIANNON_PASS=''   #Basic Auth Password
-export TRIANNON_SECRET='' #OAuth Client Secret Key
+export TRIANNON_OAUTH_ID=''     #OAuth Client ID
+export TRIANNON_OAUTH_SECRET='' #OAuth Client Secret
 export TRIANNON_CONTAINER='/annotations/'
 
