--- a/spec/fixtures/vcr_cassettes/TriannonClient/_post_annotation/logs_exceptions_for_RestClient_Exception.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_post_annotation/logs_exceptions_for_RestClient_Exception.yml
@@ -25,15 +25,15 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Content-Length:
-      - '152196'
+      - '152203'
       X-Request-Id:
-      - 8774e6f0-72dd-4707-9c8d-9239177edb1e
+      - 19ef165a-737d-4f16-9096-f7f237d33376
       X-Runtime:
-      - '0.505227'
+      - '0.308750'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:30:56 GMT
+      - Thu, 28 May 2015 01:30:56 GMT
       Connection:
       - Keep-Alive
     body:
@@ -77,7 +77,7 @@ http_interactions:
         \   }\n  </script>\n</head>\n<body>\n\n<header>\n  <h1>Template is missing</h1>\n</header>\n\n<div
         id=\"container\">\n  <h2>Missing template triannon/annotations/new, triannon/application/new
         with {:locale=&gt;[:en], :formats=&gt;[:jsonld], :variants=&gt;[], :handlers=&gt;[:erb,
-        :builder, :raw, :ruby, :coffee, :jbuilder]}. Searched in:\n  * &quot;/data/src/dlss/ld4l_data/annotations/triannon/spec/internal/app/views&quot;\n
+        :builder, :raw, :ruby, :coffee, :jbuilder, :haml]}. Searched in:\n  * &quot;/data/src/dlss/ld4l_data/annotations/triannon/spec/internal/app/views&quot;\n
         \ * &quot;/data/src/dlss/ld4l_data/annotations/triannon/app/views&quot;\n</h2>\n\n
         \     <div class=\"source \" id=\"frame-source-0\">\n      <div class=\"info\">\n
         \       Extracted source (around line <strong>#46</strong>):\n      </div>\n
@@ -1668,7 +1668,7 @@ http_interactions:
         &quot;gzip, deflate&quot;\nREMOTE_ADDR: &quot;127.0.0.1&quot;\nREMOTE_HOST:
         &quot;127.0.0.1&quot;\nSERVER_NAME: &quot;localhost&quot;\nSERVER_PROTOCOL:
         &quot;HTTP/1.1&quot;</pre></div>\n</div>\n\n<h2 style=\"margin-top: 30px\">Response</h2>\n<p><b>Headers</b>:</p>
-        <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n<div id=\"console\"\n  data-remote-path='console/repl_sessions/afed1390762e0ae6820f588ad4e9df5c'\n
+        <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n<div id=\"console\"\n  data-remote-path='console/repl_sessions/f27c6dd7039d5518e85e75519ff2de5b'\n
         \ data-initial-prompt='>> '>\n</div>\n\n\n<script type=\"text/javascript\">\n(function()
         {\n  // DOM helpers\nfunction hasClass(el, className) {\n  var regex = new
         RegExp('(?:^|\\\\s)' + className + '(?!\\\\S)', 'g');\n  return el.className.match(regex);\n}\n\nfunction
@@ -1865,7 +1865,7 @@ http_interactions:
         \   resizerElement.addEventListener('mouseup', recordConsoleElementHeight);\n
         \ });\n});\n\n}).call(this);\n</script>\n\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:30:56 GMT
+  recorded_at: Thu, 28 May 2015 01:30:56 GMT
 - request:
     method: post
     uri: http://localhost:3000/annotations/
@@ -1891,15 +1891,15 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Content-Length:
-      - '152196'
+      - '152203'
       X-Request-Id:
-      - 47ef9622-5bcb-4b89-8abd-3cc2aa93e83f
+      - a9daa3d9-8964-4fb5-858b-d7d8960ace4a
       X-Runtime:
-      - '0.257700'
+      - '0.223821'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:30:58 GMT
+      - Thu, 28 May 2015 01:30:58 GMT
       Connection:
       - Keep-Alive
     body:
@@ -1943,7 +1943,7 @@ http_interactions:
         \   }\n  </script>\n</head>\n<body>\n\n<header>\n  <h1>Template is missing</h1>\n</header>\n\n<div
         id=\"container\">\n  <h2>Missing template triannon/annotations/new, triannon/application/new
         with {:locale=&gt;[:en], :formats=&gt;[:jsonld], :variants=&gt;[], :handlers=&gt;[:erb,
-        :builder, :raw, :ruby, :coffee, :jbuilder]}. Searched in:\n  * &quot;/data/src/dlss/ld4l_data/annotations/triannon/spec/internal/app/views&quot;\n
+        :builder, :raw, :ruby, :coffee, :jbuilder, :haml]}. Searched in:\n  * &quot;/data/src/dlss/ld4l_data/annotations/triannon/spec/internal/app/views&quot;\n
         \ * &quot;/data/src/dlss/ld4l_data/annotations/triannon/app/views&quot;\n</h2>\n\n
         \     <div class=\"source \" id=\"frame-source-0\">\n      <div class=\"info\">\n
         \       Extracted source (around line <strong>#46</strong>):\n      </div>\n
@@ -3534,7 +3534,7 @@ http_interactions:
         &quot;gzip, deflate&quot;\nREMOTE_ADDR: &quot;127.0.0.1&quot;\nREMOTE_HOST:
         &quot;127.0.0.1&quot;\nSERVER_NAME: &quot;localhost&quot;\nSERVER_PROTOCOL:
         &quot;HTTP/1.1&quot;</pre></div>\n</div>\n\n<h2 style=\"margin-top: 30px\">Response</h2>\n<p><b>Headers</b>:</p>
-        <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n<div id=\"console\"\n  data-remote-path='console/repl_sessions/ca2c73a9c5f2e2ae33f362aadbcdac37'\n
+        <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n<div id=\"console\"\n  data-remote-path='console/repl_sessions/6e8c1b95af8e5aa03eeee5e20fa7e3c1'\n
         \ data-initial-prompt='>> '>\n</div>\n\n\n<script type=\"text/javascript\">\n(function()
         {\n  // DOM helpers\nfunction hasClass(el, className) {\n  var regex = new
         RegExp('(?:^|\\\\s)' + className + '(?!\\\\S)', 'g');\n  return el.className.match(regex);\n}\n\nfunction
@@ -3731,7 +3731,7 @@ http_interactions:
         \   resizerElement.addEventListener('mouseup', recordConsoleElementHeight);\n
         \ });\n});\n\n}).call(this);\n</script>\n\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:30:58 GMT
+  recorded_at: Thu, 28 May 2015 01:30:58 GMT
 - request:
     method: post
     uri: http://localhost:3000/annotations/
@@ -3757,15 +3757,15 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Content-Length:
-      - '152196'
+      - '152203'
       X-Request-Id:
-      - e174b92f-5dd5-4119-9b80-f143f0a4a578
+      - 723c3c89-2953-4379-a999-53983e02a02b
       X-Runtime:
-      - '0.254352'
+      - '0.221335'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:31:00 GMT
+      - Thu, 28 May 2015 01:31:00 GMT
       Connection:
       - Keep-Alive
     body:
@@ -3809,7 +3809,7 @@ http_interactions:
         \   }\n  </script>\n</head>\n<body>\n\n<header>\n  <h1>Template is missing</h1>\n</header>\n\n<div
         id=\"container\">\n  <h2>Missing template triannon/annotations/new, triannon/application/new
         with {:locale=&gt;[:en], :formats=&gt;[:jsonld], :variants=&gt;[], :handlers=&gt;[:erb,
-        :builder, :raw, :ruby, :coffee, :jbuilder]}. Searched in:\n  * &quot;/data/src/dlss/ld4l_data/annotations/triannon/spec/internal/app/views&quot;\n
+        :builder, :raw, :ruby, :coffee, :jbuilder, :haml]}. Searched in:\n  * &quot;/data/src/dlss/ld4l_data/annotations/triannon/spec/internal/app/views&quot;\n
         \ * &quot;/data/src/dlss/ld4l_data/annotations/triannon/app/views&quot;\n</h2>\n\n
         \     <div class=\"source \" id=\"frame-source-0\">\n      <div class=\"info\">\n
         \       Extracted source (around line <strong>#46</strong>):\n      </div>\n
@@ -5400,7 +5400,7 @@ http_interactions:
         &quot;gzip, deflate&quot;\nREMOTE_ADDR: &quot;127.0.0.1&quot;\nREMOTE_HOST:
         &quot;127.0.0.1&quot;\nSERVER_NAME: &quot;localhost&quot;\nSERVER_PROTOCOL:
         &quot;HTTP/1.1&quot;</pre></div>\n</div>\n\n<h2 style=\"margin-top: 30px\">Response</h2>\n<p><b>Headers</b>:</p>
-        <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n<div id=\"console\"\n  data-remote-path='console/repl_sessions/b1a04b1940469991c44e02a639594607'\n
+        <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n<div id=\"console\"\n  data-remote-path='console/repl_sessions/4f4966978fe371d8f1542c7b15a312a7'\n
         \ data-initial-prompt='>> '>\n</div>\n\n\n<script type=\"text/javascript\">\n(function()
         {\n  // DOM helpers\nfunction hasClass(el, className) {\n  var regex = new
         RegExp('(?:^|\\\\s)' + className + '(?!\\\\S)', 'g');\n  return el.className.match(regex);\n}\n\nfunction
@@ -5597,5 +5597,5 @@ http_interactions:
         \   resizerElement.addEventListener('mouseup', recordConsoleElementHeight);\n
         \ });\n});\n\n}).call(this);\n</script>\n\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:31:00 GMT
+  recorded_at: Thu, 28 May 2015 01:31:00 GMT
 recorded_with: VCR 2.9.3
