--- a/.env_example
+++ b/.env_example
@@ -14,5 +14,5 @@ export TRIANNON_LOG_FILE='log/triannon_client.log'
 export TRIANNON_HOST='http://localhost:3000'
 export TRIANNON_USER=''
 export TRIANNON_PASS=''
-export TRIANNON_CONTAINER='/annotations/'
+export TRIANNON_CONTAINER='/annotations/foo'
 
