--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/logs_exceptions.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/logs_exceptions.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/delete_logs_exceptions
+    uri: http://localhost:3000/annotations/foo/delete_logs_exceptions
     body:
       encoding: US-ASCII
       string: ''
@@ -29,25 +29,25 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 85b336c0-e659-4a2f-b775-93b3e968a74c
+      - 1dabd250-f2e9-4fbe-b1e0-b8b04be99db9
       X-Runtime:
-      - '0.030391'
+      - '0.028808'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:06:13 GMT
+      - Fri, 19 Jun 2015 18:37:46 GMT
       Content-Length:
-      - '1458'
+      - '1466'
       Connection:
       - Keep-Alive
       Set-Cookie:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting delete_logs_exceptions from LDP</h2><html>\n<head>\n<meta
+      string: "<h2>error getting foo/delete_logs_exceptions from LDP</h2><html>\n<head>\n<meta
         http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
         404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/delete_logs_exceptions. Reason:\n<pre>    Not
+        accessing /fedora/rest/anno/foo/delete_logs_exceptions. Reason:\n<pre>    Not
         Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -60,5 +60,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:06:13 GMT
+  recorded_at: Fri, 19 Jun 2015 18:37:46 GMT
 recorded_with: VCR 2.9.3
