--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_FALSE_for_a_500_response_to_a_DELETE_request.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_FALSE_for_a_500_response_to_a_DELETE_request.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/500_is_false
+    uri: http://localhost:3000/annotations/foo/500_is_false
     body:
       encoding: US-ASCII
       string: ''
@@ -29,25 +29,26 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 8b274e2e-d4ab-41b8-aa99-f8aa73deb743
+      - 61e53acf-5c6e-4ddf-b575-a1944ed48bff
       X-Runtime:
-      - '0.061279'
+      - '0.037267'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:06:07 GMT
+      - Fri, 19 Jun 2015 18:37:41 GMT
       Content-Length:
-      - '1438'
+      - '1446'
       Connection:
       - Keep-Alive
       Set-Cookie:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting 500_is_false from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\"
-        content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
-        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/500_is_false. Reason:\n<pre>
-        \   Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
+      string: "<h2>error getting foo/500_is_false from LDP</h2><html>\n<head>\n<meta
+        http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
+        404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
+        accessing /fedora/rest/anno/foo/500_is_false. Reason:\n<pre>    Not Found</pre></p><hr
+        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -57,7 +58,7 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
-        \                                               \n<br/>                                                \n\n</body>\n</html>\n"
+        \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:06:07 GMT
+  recorded_at: Fri, 19 Jun 2015 18:37:41 GMT
 recorded_with: VCR 2.9.3
