--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_for_a_202_response_to_a_DELETE_request.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_for_a_202_response_to_a_DELETE_request.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/202_is_true
+    uri: http://localhost:3000/annotations/foo/202_is_true
     body:
       encoding: US-ASCII
       string: ''
@@ -29,25 +29,26 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 14210990-38b2-4f3c-812e-188da313dba7
+      - 52dcb50d-fa39-4ef0-b7b2-ff1357b627b6
       X-Runtime:
-      - '0.037773'
+      - '0.022346'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:06:07 GMT
+      - Fri, 19 Jun 2015 18:37:41 GMT
       Content-Length:
-      - '1436'
+      - '1444'
       Connection:
       - Keep-Alive
       Set-Cookie:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting 202_is_true from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\"
-        content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
-        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/202_is_true. Reason:\n<pre>
-        \   Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
+      string: "<h2>error getting foo/202_is_true from LDP</h2><html>\n<head>\n<meta
+        http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
+        404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
+        accessing /fedora/rest/anno/foo/202_is_true. Reason:\n<pre>    Not Found</pre></p><hr
+        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -57,7 +58,7 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
-        \                                               \n<br/>                                                \n\n</body>\n</html>\n"
+        \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:06:07 GMT
+  recorded_at: Fri, 19 Jun 2015 18:37:41 GMT
 recorded_with: VCR 2.9.3
