--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_when_deleting_an_open_annotation_that_does_NOT_exist.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_when_deleting_an_open_annotation_that_does_NOT_exist.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/anno_does_not_exist
+    uri: http://localhost:3000/annotations/foo/anno_does_not_exist
     body:
       encoding: US-ASCII
       string: ''
@@ -29,24 +29,24 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - f8942ff0-133d-4b9a-a28d-46215c478919
+      - fa024174-24ef-408a-a170-f172beea9cb1
       X-Runtime:
-      - '0.034329'
+      - '0.021353'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:06:13 GMT
+      - Fri, 19 Jun 2015 18:37:45 GMT
       Content-Length:
-      - '1452'
+      - '1460'
       Connection:
       - Keep-Alive
     body:
       encoding: UTF-8
-      string: "<h2>error getting anno_does_not_exist from LDP</h2><html>\n<head>\n<meta
+      string: "<h2>error getting foo/anno_does_not_exist from LDP</h2><html>\n<head>\n<meta
         http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
         404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/anno_does_not_exist. Reason:\n<pre>    Not Found</pre></p><hr
-        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
+        accessing /fedora/rest/anno/foo/anno_does_not_exist. Reason:\n<pre>    Not
+        Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -58,10 +58,10 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:06:13 GMT
+  recorded_at: Fri, 19 Jun 2015 18:37:45 GMT
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/anno_does_not_exist
+    uri: http://localhost:3000/annotations/foo/anno_does_not_exist
     body:
       encoding: US-ASCII
       string: ''
@@ -88,26 +88,26 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 474661ad-5d46-463d-a50b-950d513a3917
+      - b2924f3b-8192-4cc3-85ff-29b1f47cc961
       X-Runtime:
-      - '0.031949'
+      - '0.026076'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:06:13 GMT
+      - Fri, 19 Jun 2015 18:37:45 GMT
       Content-Length:
-      - '1452'
+      - '1460'
       Connection:
       - Keep-Alive
       Set-Cookie:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting anno_does_not_exist from LDP</h2><html>\n<head>\n<meta
+      string: "<h2>error getting foo/anno_does_not_exist from LDP</h2><html>\n<head>\n<meta
         http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
         404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/anno_does_not_exist. Reason:\n<pre>    Not Found</pre></p><hr
-        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
+        accessing /fedora/rest/anno/foo/anno_does_not_exist. Reason:\n<pre>    Not
+        Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -119,5 +119,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:06:13 GMT
+  recorded_at: Fri, 19 Jun 2015 18:37:45 GMT
 recorded_with: VCR 2.9.3
