--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/validates_the_annotation_ID.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/validates_the_annotation_ID.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/checking_anno_id
+    uri: http://localhost:3000/annotations/foo/checking_anno_id
     body:
       encoding: US-ASCII
       string: ''
@@ -29,25 +29,25 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 64a23603-58e9-4698-95b6-f8155a4dac15
+      - 8932dd00-3e1b-49e4-8b78-8746c4b697ca
       X-Runtime:
-      - '0.040965'
+      - '0.020819'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:06:08 GMT
+      - Fri, 19 Jun 2015 18:37:41 GMT
       Content-Length:
-      - '1446'
+      - '1454'
       Connection:
       - Keep-Alive
       Set-Cookie:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting checking_anno_id from LDP</h2><html>\n<head>\n<meta
+      string: "<h2>error getting foo/checking_anno_id from LDP</h2><html>\n<head>\n<meta
         http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
         404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/checking_anno_id. Reason:\n<pre>    Not Found</pre></p><hr
+        accessing /fedora/rest/anno/foo/checking_anno_id. Reason:\n<pre>    Not Found</pre></p><hr
         /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -60,5 +60,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:06:08 GMT
+  recorded_at: Fri, 19 Jun 2015 18:37:41 GMT
 recorded_with: VCR 2.9.3
