Config - add authentication parameters

--- a/.env_example
+++ b/.env_example
@@ -14,5 +14,12 @@ export TRIANNON_LOG_FILE='log/triannon_client.log'
 export TRIANNON_HOST='http://localhost:3000'
 export TRIANNON_USER=''
 export TRIANNON_PASS=''
-export TRIANNON_CONTAINER='/annotations/foo'
 
+# Parameters for triannon client authentication
+export TRIANNON_CLIENT_ID=''
+export TRIANNON_CLIENT_PASS=''
+
+# Parameters for triannon container
+export TRIANNON_CONTAINER='/annotations/foo'
+export TRIANNON_CONTAINER_USER=''
+export TRIANNON_CONTAINER_WORKGROUPS='' # CSV
