Tweak .env_example

--- a/.env_example
+++ b/.env_example
@@ -22,4 +22,13 @@ export TRIANNON_CLIENT_PASS=''
 # Parameters for triannon container
 export TRIANNON_CONTAINER='/annotations/foo'
 export TRIANNON_CONTAINER_USER=''
-export TRIANNON_CONTAINER_WORKGROUPS='' # CSV
+export TRIANNON_CONTAINER_WORKGROUPS=''
+
+
+# The following configuration settings in comments may work with the triannon
+# server setup on localhost and running the 'development' config.
+#export TRIANNON_CLIENT_ID='clientA'
+#export TRIANNON_CLIENT_PASS='secretA'
+#export TRIANNON_CONTAINER='/annotations/bar'
+#export TRIANNON_CONTAINER_USER='test'
+#export TRIANNON_CONTAINER_WORKGROUPS='org:wg-A'
