--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/logs_exceptions.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/logs_exceptions.yml
@@ -8,9 +8,11 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - "*/*; q=0.5, application/xml"
+      - application/json
       Accept-Encoding:
       - gzip, deflate
+      Content-Type:
+      - application/json
       User-Agent:
       - Ruby
   response:
@@ -29,13 +31,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 1dabd250-f2e9-4fbe-b1e0-b8b04be99db9
+      - d12b5b03-b92e-4a7c-8a8e-013a5740a521
       X-Runtime:
-      - '0.028808'
+      - '0.031937'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 19 Jun 2015 18:37:46 GMT
+      - Fri, 24 Jul 2015 18:57:06 GMT
       Content-Length:
       - '1466'
       Connection:
@@ -60,5 +62,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:46 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:06 GMT
 recorded_with: VCR 2.9.3
