--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_for_a_202_response_to_a_DELETE_request.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_for_a_202_response_to_a_DELETE_request.yml
@@ -8,9 +8,11 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - "*/*; q=0.5, application/xml"
+      - application/json
       Accept-Encoding:
       - gzip, deflate
+      Content-Type:
+      - application/json
       User-Agent:
       - Ruby
   response:
@@ -29,13 +31,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 52dcb50d-fa39-4ef0-b7b2-ff1357b627b6
+      - 1d6880aa-7fc7-453b-a13c-29640b336f1a
       X-Runtime:
-      - '0.022346'
+      - '0.025135'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 19 Jun 2015 18:37:41 GMT
+      - Fri, 24 Jul 2015 18:57:01 GMT
       Content-Length:
       - '1444'
       Connection:
@@ -60,5 +62,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:41 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:01 GMT
 recorded_with: VCR 2.9.3
