--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_when_deleting_an_open_annotation_that_does_NOT_exist.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_when_deleting_an_open_annotation_that_does_NOT_exist.yml
@@ -11,6 +11,8 @@ http_interactions:
       - application/ld+json
       Accept-Encoding:
       - gzip, deflate
+      Content-Type:
+      - application/json
       User-Agent:
       - Ruby
   response:
@@ -29,13 +31,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - fa024174-24ef-408a-a170-f172beea9cb1
+      - 32df13d2-171b-41bd-b146-ded63b099a56
       X-Runtime:
-      - '0.021353'
+      - '0.026259'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 19 Jun 2015 18:37:45 GMT
+      - Fri, 24 Jul 2015 18:57:06 GMT
       Content-Length:
       - '1460'
       Connection:
@@ -58,7 +60,7 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:45 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:06 GMT
 - request:
     method: delete
     uri: http://localhost:3000/annotations/foo/anno_does_not_exist
@@ -67,9 +69,11 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - "*/*; q=0.5, application/xml"
+      - application/json
       Accept-Encoding:
       - gzip, deflate
+      Content-Type:
+      - application/json
       User-Agent:
       - Ruby
   response:
@@ -88,13 +92,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - b2924f3b-8192-4cc3-85ff-29b1f47cc961
+      - 2434ec40-5154-4673-b8dc-7bf226a80ef1
       X-Runtime:
-      - '0.026076'
+      - '0.033022'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 19 Jun 2015 18:37:45 GMT
+      - Fri, 24 Jul 2015 18:57:06 GMT
       Content-Length:
       - '1460'
       Connection:
@@ -119,5 +123,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:45 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:06 GMT
 recorded_with: VCR 2.9.3
