--- a/spec/fixtures/vcr_cassettes/TriannonClient/_get_annotations/returns_an_RDF_Graph.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_get_annotations/returns_an_RDF_Graph.yml
@@ -11,6 +11,8 @@ http_interactions:
       - application/ld+json
       Accept-Encoding:
       - gzip, deflate
+      Content-Type:
+      - application/json
       User-Agent:
       - Ruby
   response:
@@ -31,13 +33,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 019a9292-673f-4bf8-9cb6-2a386e4b3335
+      - fdeb1d51-aa94-4309-ab25-6715584a4f14
       X-Runtime:
-      - '0.003797'
+      - '0.005836'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 19 Jun 2015 18:37:46 GMT
+      - Fri, 24 Jul 2015 18:57:07 GMT
       Content-Length:
       - '98'
       Connection:
@@ -46,7 +48,7 @@ http_interactions:
       encoding: UTF-8
       string: <html><body>You are being <a href="http://localhost:3000/foo/search">redirected</a>.</body></html>
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:46 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:07 GMT
 - request:
     method: get
     uri: http://localhost:3000/foo/search
@@ -58,6 +60,8 @@ http_interactions:
       - application/ld+json
       Accept-Encoding:
       - gzip, deflate
+      Content-Type:
+      - application/json
       Cookie:
       - ''
       User-Agent:
@@ -80,13 +84,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 61ebc000-eeb6-4a60-9bb8-9ccdd02680e0
+      - ce493031-833b-4e6e-9b66-07296198f824
       X-Runtime:
-      - '0.019059'
+      - '0.019213'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 19 Jun 2015 18:37:46 GMT
+      - Fri, 24 Jul 2015 18:57:07 GMT
       Content-Length:
       - '185'
       Connection:
@@ -95,7 +99,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"@context":"http://iiif.io/api/presentation/2/context.json","@type":"sc:AnnotationList","within":{"@type":"sc:Layer","total":0},"resources":[],"@id":"http://localhost:3000/foo/search"}'
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:46 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:07 GMT
 - request:
     method: get
     uri: http://iiif.io/api/presentation/2/context.json
@@ -115,11 +119,11 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 19 Jun 2015 18:41:21 GMT
+      - Fri, 24 Jul 2015 19:01:33 GMT
       Server:
       - Apache/2.2.15 (Red Hat)
       Last-Modified:
-      - Thu, 18 Jun 2015 18:49:34 GMT
+      - Mon, 06 Jul 2015 20:25:05 GMT
       Accept-Ranges:
       - bytes
       Content-Length:
@@ -127,7 +131,7 @@ http_interactions:
       Cache-Control:
       - max-age=86400
       Expires:
-      - Sat, 20 Jun 2015 18:41:21 GMT
+      - Sat, 25 Jul 2015 19:01:33 GMT
       Content-Type:
       - application/ld+json
       Access-Control-Allow-Origin:
@@ -193,7 +197,7 @@ http_interactions:
         \   \"language\":    {\"@id\": \"dc:language\"},\n\t\t    \"value\":       {\"@id\":
         \"rdf:value\"},\n\t\t    \"label\":       {\"@id\": \"rdfs:label\"}\n\t\t}\n\t]\n}"
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:46 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:07 GMT
 - request:
     method: get
     uri: http://iiif.io/api/presentation/2/context.json
@@ -213,11 +217,11 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 19 Jun 2015 18:41:21 GMT
+      - Fri, 24 Jul 2015 19:01:33 GMT
       Server:
       - Apache/2.2.15 (Red Hat)
       Last-Modified:
-      - Thu, 18 Jun 2015 18:49:34 GMT
+      - Mon, 06 Jul 2015 20:25:05 GMT
       Accept-Ranges:
       - bytes
       Content-Length:
@@ -225,7 +229,7 @@ http_interactions:
       Cache-Control:
       - max-age=86400
       Expires:
-      - Sat, 20 Jun 2015 18:41:21 GMT
+      - Sat, 25 Jul 2015 19:01:33 GMT
       Content-Type:
       - application/ld+json
       Access-Control-Allow-Origin:
@@ -291,5 +295,5 @@ http_interactions:
         \   \"language\":    {\"@id\": \"dc:language\"},\n\t\t    \"value\":       {\"@id\":
         \"rdf:value\"},\n\t\t    \"label\":       {\"@id\": \"rdfs:label\"}\n\t\t}\n\t]\n}"
     http_version: 
-  recorded_at: Fri, 19 Jun 2015 18:37:46 GMT
+  recorded_at: Fri, 24 Jul 2015 18:57:07 GMT
 recorded_with: VCR 2.9.3
