--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/csv_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/csv_.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - application/x-trig
+      - text/csv
       Accept-Encoding:
       - gzip, deflate
       Content-Type:
@@ -23,15 +23,15 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Content-Length:
-      - '99513'
+      - '99503'
       X-Request-Id:
-      - 6f07ba64-64cf-491f-9148-411776b6a99e
+      - ba59f50c-7a84-41e0-8d71-a459437f1637
       X-Runtime:
-      - '0.227172'
+      - '0.216260'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Thu, 30 Jul 2015 00:51:26 GMT
+      - Thu, 30 Jul 2015 00:51:27 GMT
       Connection:
       - Keep-Alive
     body:
@@ -1221,11 +1221,11 @@ http_interactions:
         style=\"display:none\"><pre></pre></div>\n</div>\n\n<div class=\"details\">\n
         \ <div class=\"summary\"><a href=\"#\" onclick=\"return toggleEnvDump()\">Toggle
         env dump</a></div>\n  <div id=\"env_dump\" style=\"display:none\"><pre>GATEWAY_INTERFACE:
-        &quot;CGI/1.1&quot;\nHTTP_ACCEPT: &quot;application/x-trig&quot;\nHTTP_ACCEPT_ENCODING:
+        &quot;CGI/1.1&quot;\nHTTP_ACCEPT: &quot;text/csv&quot;\nHTTP_ACCEPT_ENCODING:
         &quot;gzip, deflate&quot;\nREMOTE_ADDR: &quot;127.0.0.1&quot;\nREMOTE_HOST:
         &quot;127.0.0.1&quot;\nSERVER_NAME: &quot;localhost&quot;\nSERVER_PROTOCOL:
         &quot;HTTP/1.1&quot;</pre></div>\n</div>\n\n<h2 style=\"margin-top: 30px\">Response</h2>\n<p><b>Headers</b>:</p>
         <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Thu, 30 Jul 2015 00:51:26 GMT
+  recorded_at: Thu, 30 Jul 2015 00:51:27 GMT
 recorded_with: VCR 2.9.3
