--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/n3_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/n3_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F94%2F51%2F69%2F73%2F94516973-a3dd-4920-ac6d-4504f25855e6
+    uri: http://localhost:3000/annotations/bar/%2Ff3%2F43%2F7f%2F14%2Ff3437f14-1a0c-4a8e-8b0a-fc713786e6c9
     body:
       encoding: US-ASCII
       string: ''
@@ -25,13 +25,13 @@ http_interactions:
       Content-Length:
       - '99502'
       X-Request-Id:
-      - 250bbaf4-d6eb-466d-9233-aa2451c5726c
+      - 6cfad475-2742-4aa0-8d5a-1b24eaf3c299
       X-Runtime:
-      - '0.218204'
+      - '0.214968'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Wed, 29 Jul 2015 22:39:11 GMT
+      - Thu, 30 Jul 2015 00:51:25 GMT
       Connection:
       - Keep-Alive
     body:
@@ -1215,7 +1215,7 @@ http_interactions:
         = el.className.replace(\" hidden\", \"\");\n          currentSource = el;\n
         \       }\n      }\n    }\n  </script>\n</div>\n\n  \n\n<h2 style=\"margin-top:
         30px\">Request</h2>\n<p><b>Parameters</b>:</p> <pre>{&quot;anno_root&quot;=&gt;&quot;bar&quot;,\n
-        &quot;id&quot;=&gt;&quot;/94/51/69/73/94516973-a3dd-4920-ac6d-4504f25855e6&quot;}</pre>\n\n<div
+        &quot;id&quot;=&gt;&quot;/f3/43/7f/14/f3437f14-1a0c-4a8e-8b0a-fc713786e6c9&quot;}</pre>\n\n<div
         class=\"details\">\n  <div class=\"summary\"><a href=\"#\" onclick=\"return
         toggleSessionDump()\">Toggle session dump</a></div>\n  <div id=\"session_dump\"
         style=\"display:none\"><pre></pre></div>\n</div>\n\n<div class=\"details\">\n
@@ -1227,5 +1227,5 @@ http_interactions:
         &quot;HTTP/1.1&quot;</pre></div>\n</div>\n\n<h2 style=\"margin-top: 30px\">Response</h2>\n<p><b>Headers</b>:</p>
         <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Wed, 29 Jul 2015 22:39:11 GMT
+  recorded_at: Thu, 30 Jul 2015 00:51:25 GMT
 recorded_with: VCR 2.9.3
