--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/plain_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/plain_.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - application/x-trig
+      - text/plain
       Accept-Encoding:
       - gzip, deflate
       Content-Type:
@@ -23,11 +23,11 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Content-Length:
-      - '99513'
+      - '99505'
       X-Request-Id:
-      - 6f07ba64-64cf-491f-9148-411776b6a99e
+      - 70f9cef7-6ea0-48af-b7d9-c2890fab968c
       X-Runtime:
-      - '0.227172'
+      - '0.267963'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
@@ -1221,7 +1221,7 @@ http_interactions:
         style=\"display:none\"><pre></pre></div>\n</div>\n\n<div class=\"details\">\n
         \ <div class=\"summary\"><a href=\"#\" onclick=\"return toggleEnvDump()\">Toggle
         env dump</a></div>\n  <div id=\"env_dump\" style=\"display:none\"><pre>GATEWAY_INTERFACE:
-        &quot;CGI/1.1&quot;\nHTTP_ACCEPT: &quot;application/x-trig&quot;\nHTTP_ACCEPT_ENCODING:
+        &quot;CGI/1.1&quot;\nHTTP_ACCEPT: &quot;text/plain&quot;\nHTTP_ACCEPT_ENCODING:
         &quot;gzip, deflate&quot;\nREMOTE_ADDR: &quot;127.0.0.1&quot;\nREMOTE_HOST:
         &quot;127.0.0.1&quot;\nSERVER_NAME: &quot;localhost&quot;\nSERVER_PROTOCOL:
         &quot;HTTP/1.1&quot;</pre></div>\n</div>\n\n<h2 style=\"margin-top: 30px\">Response</h2>\n<p><b>Headers</b>:</p>
