--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/x-turtle_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/x-turtle_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F94%2F51%2F69%2F73%2F94516973-a3dd-4920-ac6d-4504f25855e6
+    uri: http://localhost:3000/annotations/bar/%2Ff3%2F43%2F7f%2F14%2Ff3437f14-1a0c-4a8e-8b0a-fc713786e6c9
     body:
       encoding: US-ASCII
       string: ''
@@ -29,17 +29,17 @@ http_interactions:
       Content-Type:
       - application/x-turtle; charset=utf-8
       Etag:
-      - W/"5932e03a290a3d94c9e58285e865f92c"
+      - W/"0f5d75df403cf740438f93dbab07c364"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 457000a8-c900-40d4-a326-964629919d77
+      - e251ccee-2143-4ab5-a7a8-a90a764a7e6d
       X-Runtime:
-      - '0.146348'
+      - '0.143276'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Wed, 29 Jul 2015 22:39:11 GMT
+      - Thu, 30 Jul 2015 00:51:23 GMT
       Content-Length:
       - '667'
       Connection:
@@ -54,7 +54,7 @@ http_interactions:
         @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
         @prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
 
-        <http://your.triannon-server.com/annotations/bar/94/51/69/73/94516973-a3dd-4920-ac6d-4504f25855e6> a oa:Annotation;
+        <http://your.triannon-server.com/annotations/bar/f3/43/7f/14/f3437f14-1a0c-4a8e-8b0a-fc713786e6c9> a oa:Annotation;
            oa:hasBody [
              a dcmitype:Text,
                cnt:ContentAsText;
@@ -65,5 +65,5 @@ http_interactions:
            oa:hasTarget <http://purl.stanford.edu/kq131cs7229>;
            oa:motivatedBy oa:commenting .
     http_version: 
-  recorded_at: Wed, 29 Jul 2015 22:39:11 GMT
+  recorded_at: Thu, 30 Jul 2015 00:51:23 GMT
 recorded_with: VCR 2.9.3
