--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_default_content_type/returns_an_EMPTY_RDF_graph_with_a_valid_ID_for_NO_annotation_on_the_server.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_default_content_type/returns_an_EMPTY_RDF_graph_with_a_valid_ID_for_NO_annotation_on_the_server.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/0782d091-4c4c-44b9-b982-2d908a6eb9c6
+    uri: http://localhost:3000/annotations/bar/9391d667-d259-41d1-bf16-a649bd7756b6
     body:
       encoding: US-ASCII
       string: ''
@@ -31,23 +31,23 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 8d76033f-2820-49e8-acd7-ea02215bb886
+      - a902a1e1-e01c-49f9-a265-8a3e56894c1f
       X-Runtime:
-      - '0.023718'
+      - '0.018088'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Wed, 29 Jul 2015 22:39:07 GMT
+      - Thu, 30 Jul 2015 00:51:21 GMT
       Content-Length:
       - '1494'
       Connection:
       - Keep-Alive
     body:
       encoding: UTF-8
-      string: "<h2>error getting bar/0782d091-4c4c-44b9-b982-2d908a6eb9c6 from LDP</h2><html>\n<head>\n<meta
+      string: "<h2>error getting bar/9391d667-d259-41d1-bf16-a649bd7756b6 from LDP</h2><html>\n<head>\n<meta
         http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
         404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/bar/0782d091-4c4c-44b9-b982-2d908a6eb9c6. Reason:\n<pre>
+        accessing /fedora/rest/anno/bar/9391d667-d259-41d1-bf16-a649bd7756b6. Reason:\n<pre>
         \   Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -60,5 +60,66 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Wed, 29 Jul 2015 22:39:07 GMT
+  recorded_at: Thu, 30 Jul 2015 00:51:21 GMT
+- request:
+    method: get
+    uri: http://localhost:3000/annotations/bar/21aa6671-ca4e-4699-ac00-deae47884cd7
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/ld+json
+      Accept-Encoding:
+      - gzip, deflate
+      Content-Type:
+      - application/ld+json
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 404
+      message: 'Not Found '
+    headers:
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      Content-Type:
+      - text/html; charset=utf-8
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - 64930afc-3dd8-4abc-8c1b-8c94080a2e06
+      X-Runtime:
+      - '0.019232'
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
+      Date:
+      - Thu, 30 Jul 2015 00:53:03 GMT
+      Content-Length:
+      - '1494'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: "<h2>error getting bar/21aa6671-ca4e-4699-ac00-deae47884cd7 from LDP</h2><html>\n<head>\n<meta
+        http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
+        404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
+        accessing /fedora/rest/anno/bar/21aa6671-ca4e-4699-ac00-deae47884cd7. Reason:\n<pre>
+        \   Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n<br/>
+        \                                               \n<br/>                                                \n\n</body>\n</html>\n"
+    http_version: 
+  recorded_at: Thu, 30 Jul 2015 00:53:03 GMT
 recorded_with: VCR 2.9.3
